--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/bbc/peaks.js.git"
+    "url": "git://github.com/zzADRiANzz/peaks.js.git"
   },
   "license": "LGPL-3.0",
   "engines": {
