--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peaks.js",
-  "version": "3.0.0-beta.11",
+  "version": "3.0.0",
   "description": "JavaScript UI component for displaying audio waveforms",
   "main": "./dist/peaks.min.js",
   "module": "./dist/peaks.esm.js",
@@ -59,7 +59,7 @@
     "prepack": "npm run build"
   },
   "devDependencies": {
-    "@babel/preset-env": "~7.21.5",
+    "@babel/preset-env": "~7.22.6",
     "@rollup/plugin-babel": "~5.3.1",
     "@rollup/plugin-commonjs": "~22.0.2",
     "@rollup/plugin-json": "~4.1.0",
@@ -68,7 +68,7 @@
     "babel-plugin-istanbul": "~6.1.1",
     "chai": "~4.3.7",
     "copyfiles": "~2.4.1",
-    "eslint": "~8.41.0",
+    "eslint": "~8.44.0",
     "jsdoc": "~4.0.2",
     "karma": "~6.4.1",
     "karma-chai-sinon": "~0.1.5",
@@ -84,7 +84,7 @@
     "rollup": "~2.78.1",
     "rollup-plugin-peer-deps-external": "~2.2.4",
     "serve": "~14.2.0",
-    "sinon": "~15.1.0",
+    "sinon": "~15.2.0",
     "sinon-chai": "~3.7.0",
     "watchify": "~4.0.0"
   },
